--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,23 @@
 @import "tailwindcss";
+
+@media (width <= 920px) {
+    .feature {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        gap: 100px;
+    }
+
+    #feature-2 {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
+
+@media (width <= 608px) {
+    #hook-section {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 100px;
+    }
+}
